--- a/index.html
+++ b/index.html
@@ -1589,11 +1589,14 @@ async function generatePDF(data) {
                     </li>
                     <li style="margin-bottom: 10px; position: relative; padding-right: 20px;">
                         <span style="position: absolute; right: 0; font-weight: 700; color: #1565c0;">•</span>
-                        في حال بيع المنشأة أو إغلاقها لأي سبب كان، فإننا نتعهد بتقديم إخطار رسمي يفيد بذلك، والالتزام بسداد كامل المديونية. وفي حال تغيير الاسم التجاري، فسيتم إشعاركم وإرسال كافة المستندات اللازمة والمطلوبة لإثبات ذلك. كما نتعهّد شخصيًا، ومع المالك الجديد، بسداد جميع المديونيات القديمة المستحقة علينا فورًا أو وفق ما تقرره شركة الخليفي للتجارة.
+                        في حالة بيع المنشأة أو إغلاقها لأي سبب كان فإننا نتعهد بتقديم إخطار رسمي بمايفيد ذلك ونلتزم بسداد كامل المديونية ، وأما في حالة تغيير الأسم التجاري فسيتم إشعاركم وإرسال كافة المسنتدات اللازمة والمطلوبة لإثبات ذلك ، ونتعهد شخصياً مع المالك الجديد بسداد كافة المديونية القديمة المستحقة علينا فوراً أو وفق ماتحدد شركة الخليفي للتجارة.
                     </li>
                     <li style="margin-bottom: 10px; position: relative; padding-right: 20px;">
                         <span style="position: absolute; right: 0; font-weight: 700; color: #1565c0;">•</span>
                         عمل مطابقة للرصيد بصفة دورية مع شركة الخليفي للتجارة (حسب النظام المتبع) على أن تعتبر المطابقة للرصيد مصادقة وإقراراً منا بصحتها ويعتد بها أمام الجهات المختصة أياً كانت.
+                    </li>
+                    <li style="margin-bottom: 12px; padding-right: 10px; text-align: justify; line-height: 1.8;">
+                        وبعد الموافقة على جميع ماسبق الرجاء فتح حساب خاص بنا لديكم طبقاً للآتي :
                     </li>
                 </ul>
             </div>
@@ -1665,7 +1668,7 @@ async function generatePDF(data) {
                         <strong style="color: #1565c0;">1.</strong> نسخة من السجل التجاري (ساري المفعول)
                     </div>
                     <div style="margin-bottom: 15px; padding: 12px; background: white; border-radius: 6px; border-right: 4px solid #1565c0;">
-                        <strong style="color: #1565c0;">2.</strong> شهادة ضريبة القيمة المضافة
+                        <strong style="color: #1565c0;">2.</strong> شهادة التسجيل في ضريبة القيمة المضافة
                     </div>
                     <div style="padding: 12px; background: white; border-radius: 6px; border-right: 4px solid #1565c0;">
                         <strong style="color: #1565c0;">3.</strong> العنوان الوطني
